service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myyshop
  namespace: development
  labels:
    app: myyshop
spec:
  selector:
    app: myyshop
  ports:
  - port: 80
    targetPort: 8080
    name: http
